k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-prueba-k8s
spec:
  type: NodePort
  ports:
  - name: service-http
    port: 5001
    targetPort: 5001
  selector:
    app: prueba-k8s
